# simply

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  config_lib.py  data_lib.py  example_script.sh  gcloud_quickstart.md  github_issue.md  keep_routing_and_sampling_mask.md  keep_routing_and_sampling_mask_review.md  main.py  model_lib.py  pr_description.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: automated_ai_research_example.md  gcloud.md
scripts/: Dockerfile.simply  launch_gke.sh
setup/: setup_assets.py
simply/: config_lib.py  config_lib_test.py  data_lib.py  data_lib_test.py  main.py  model_lib.py  model_lib_test.py  rl_lib.py  rl_lib_test.py  tool_lib.py  tool_lib_test.py
simply/eval/: decode_eval.py  page_decode_eval.py  remote_decode_eval.py
simply/serving/: common.py  multihost.md  page_server.py  server.proto  struct.proto  vanilla_server.py
simply/tools/: hf_to_orbax.py
simply/utils/: checkpoint_lib.py  checkpoint_lib_test.py  common.py  common_test.py  conftest.py  control_flow.py  control_flow_test.py  distributions.py  distributions_test.py  evaluation_lib.py  evaluation_lib_test.py  experiment_helper.py  initializer.py  initializer_test.py  lm_format.py  lm_format_test.py  masked.py  masked_test.py  math_eval.py  metric_writer.py  metric_writer_test.py  module.py  module_test.py  optimizer.py  optimizer_test.py  optimizers.py  optimizers_test.py  position_encoding.py  pytree.py  pytree_test.py  ragged_paged_attention.py  ragged_paged_attention_test.py  registry.py  registry_test.py  replay_buffers.py  (+12 more)
(+9 files in other folders)
