[project]
name = "simply"
version = "0.3.4"
description = "Simply: Minimal Code for Frontier LLM Research in JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "clu>=0.0.12",
    "datasets>=4.5.0",
    "deprecated>=1.3.1",
    "einops>=0.8.1",
    "grain>=0.2.15",
    "orbax>=0.1.9",
    "orbax-checkpoint>=0.11.32",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "sentencepiece>=0.2.1",
    "sympy>=1.14.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "tensorflow-cpu>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "tokenizers>=0.22.2",
]


[project.optional-dependencies]
gpu = [
    "jax[cuda13]",
]
tpu = [
    "jax[tpu]>=0.8.2",
]

[tool.setuptools.packages.find]
include = ["simply", "simply.*"]
